cabal-version:      3.6
name:               h99
version:            0.1.0.0

synopsis:           My solutions to the H-99 problems.

license:            MIT
license-file:       LICENSE
author:             Christopher Leap
maintainer:         cleapdev@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Lib
    -- other-moduels:
    build-depends:    base ^>=4.14
    hs-source-dirs:   src
    default-language: Haskell2010
test-suite grade
    type:             exitcode-stdio-1.0
    -- other-modules:    Lib
    build-depends:    base ^>=4.14,
                      tasty ^>=1.4.2,
		      tasty-hunit ^>=0.10.0.3,
		      tasty-hspec ^>=1.2,
		      h99
    hs-source-dirs:   test
    default-language: Haskell2010
    main-is:          LibTest.hs
